Добавила таблицу на страницу с заданиями

--- a/templates/task.html
+++ b/templates/task.html
@@ -34,7 +34,7 @@
 </div>
 
 <div class="container-screen">
-    <div class="col-lg-8 after-add">
+    <div class="col-lg-8">
         <div class="row table-head">
             <div class="col">{{ theme }}</div>
         </div>
@@ -54,6 +54,18 @@
                 </form>
             </div>
         </div>
+        <div class="row table-head after-add">
+        <div class="col">Задачи</div>
+        <div class="col-lg-4">Количество проверок</div>
+      </div>
+      <div class="row">
+        <div class="col cell">fgh</div>
+        <div class="col-lg-4 cell">fgh</div>
+      </div>
+      <div class="row">
+        <div class="col cell border-radius-left">fgh</div>
+        <div class="col-lg-4 cell border-radius-right">fgh</div>
+      </div>
     </div>
 </div>
 {% endblock %}
