--- a/templates/header.html
+++ b/templates/header.html
@@ -1,21 +1,21 @@
 <header>
     <div class="points-in-header">
         <div class="points">
-            {% if 'student' in user_type() or 'teacher' in user_type() %}
+            {% if 'student' in user_type or 'teacher' in user_type %}
             <a href="/solving" class="one-point {% if request.endpoint == '/solving'%}active{% endif %}">Ожидает
                 проверки</a>
             {% endif %}
-            {% if 'teacher' in user_type() %}
+            {% if 'teacher' in user_type %}
             <a href="/discipline" class="one-point {% if request.endpoint == 'discipline' %}active{% endif %}">Мои
                 дисциплины</a>
             {% endif %}
-            {% if 'student' in user_type() %}
+            {% if 'student' in user_type %}
             <a href="/student_task"
                class="one-point {% if request.endpoint == 'student_task' %}active{% endif %}">Мои работы</a>
             {% endif %}
         </div>
         <div class="hello-and-bye">
-            Добро пожаловать, {{ first_name() }} <a href="/logout">
+            Добро пожаловать, {{ first_name }} <a href="/logout">
             <button type="button" class="common-button logout">Выход</button>
         </a>
         </div>
