--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -3,7 +3,7 @@
 {% block formcontent %}
 {% block scripts %}
 {% endblock %}
- <form action="#">
+ <form method="POST" >
         <div class="user-details">
           <div class="input-boxreg">
             <input type="text" placeholder="Введите Имя" required id="first_name" name="first_name">
