--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -16,6 +16,8 @@
     <div class="row">
         <div class="col-lg-12"><a href="{{ student_task.link }}">Ссылка</a></div>
     </div>
+
+
     <div class="row">
         <h4>Требования</h4>
     </div>
@@ -26,6 +28,8 @@
             {% endfor %}
         </ul>
     </div>
+
+
     {% if student_task.load_file %}
     <div class="row">
         <h4>Загрузить новое решение</h4>
@@ -61,28 +65,40 @@
     {% endfor %}
 </div>
 
+
 <div class="container-screen">
     <div class="col-lg-8 after-add">
         <div class="row table-head task-head">
             <div class="col form-list without-center padding-in-form-10">
-                <H4>Название задания</H4>
-                <H6>Количество проверок</H6>
+                <H4>{{ student_task.name }}</H4>
+                <H6>Количество проверок: {{ student_task.count_review }}</H6>
+                <H6><a href="{{ student_task.link }}">Ссылка</a></H6>
             </div>
         </div>
         <div class="row">
             <div class="col cell bordered">
                 <div class="form-list without-center add padding-in-form">
                     <H4>Требования</H4>
-                    <p>1/fjbdjkbvjd</p>
+                    {% for requirement in student_task.requirement %}
+                    <p>{{ requirement }}</p>
+                    {% endfor %}
+
+                    {% if student_task.load_file %}
                     <H4>Загрузить новое решение</H4>
-                    <form method="post" class="form-list">
-                        <input class="file-add" type="file">
+                    <form method="post" class="form-list" enctype=multipart/form-data>
+                        <label for="zip">Прикрепите архив zip</label>
+                        <input class="file-add" type="file" id="zip" name="zip" accept="application/zip"
+                               required="required" size="20971520">
                         <input class="add-button download" id="submit" type="submit" value="Загрузить">
                         <div class="flex-in-line form-for-add">
-                            <input class="add-button add color-white" type="button" value="Выбрать файл">
+                            <input class="add-button add color-white" type="button"
+                                   type="file" id="zip" name="zip" accept="application/zip"
+                                   required="required" size="20971520" value="Выбрать файл">
                             <p>Файл не выбран</p>
                         </div>
                     </form>
+                    {% endif %}
+
                     <H4 class="after-add">История решений</H4>
                     <div class="add">
                         <div class="row table-head">
