--- a/static/css/main.css
+++ b/static/css/main.css
@@ -218,6 +218,7 @@ border-radius: 10px;
   margin: 0 auto;
 }
 .notification{
+  display:flex;
   align-items: center;
   background-color: white;
   font-size: 18px;
