--- a/templates/requirement.html
+++ b/templates/requirement.html
@@ -24,6 +24,7 @@
             <div class="start-at-left col cell border-radius-left border-radius-right">{{ requirement.text }}</div>
         </div>
         {% endfor %}
+         <div class="mini-form notification after-add">У этой задачи пока нет никаких требований.</div>
     </div>
 </div>
 {% endblock %}
