Исправила текст уведомления согласно UI\UX

--- a/templates/task.html
+++ b/templates/task.html
@@ -34,7 +34,7 @@
             <div class="col-lg-4 cell border-radius-right"></div>
         </div>
         {% endfor %}
-        <div class="mini-form notification after-add">На данный момент не создано ни одного задания</div>
+        <div class="mini-form notification after-add">На данный момент не создано ни одной задачи.</div>
     </div>
 </div>
 {% endblock %}
