--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,7 @@
 <!doctype html>
+
+{% load static %}
+
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
@@ -9,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" integrity="undefined" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="undefined" crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="{% url 'app:favicon' %}">
+    <link rel="shortcut icon" href="{% static 'favicon.ico' %}">
     {% block head %}{% endblock %}
     <title>Self checking</title>
 </head>
