--- a/templates/task_id.html
+++ b/templates/task_id.html
@@ -6,6 +6,7 @@
         <h4>{{ task }}</h4>
     </div>
     <form method="post">
+        {% csrf_token %}
         <h4>Новое требование</h4>
         <div class="row">
             <label class="col-lg-2" for="text">Описание</label>
@@ -18,9 +19,9 @@
     <div class="row">
         <div class="col-lg-3">Требование</div>
     </div>
-    {% for requirement in data %}
+    {% for row in data %}
     <div class="row">
-        <div class="col-lg-12">{{ requirement.text }}</div>
+        <div class="col-lg-12">{{ row.text }}</div>
     </div>
     {% endfor %}
 </div>
