--- a/templates/discipline_id.html
+++ b/templates/discipline_id.html
@@ -1,7 +1,9 @@
 {% extends 'maket.html' %}
 
+{% load static %}
+
 {% block scripts %}
-<script language="JavaScript" type="text/javascript" src={% url 'static', filename='js/theme.js' %}></script>
+<script language="JavaScript" type="text/javascript" src="{% static 'js/theme.js' %}"></script>
 {% endblock %}
 
 {% block center %}
@@ -10,29 +12,29 @@
         <h4>{{ discipline.name }}</h4>
     </div>
     <form action="student_discipline" method="post">
+        {% csrf_token %}
         <h4>Добавить студента к дисциплине</h4>
         <div class="row">
-            <input type="hidden" value="{{ discipline.id }}" name="discipline">
             <label class="col-lg-1" for="group">Группа</label>
             <select class="col-lg-3" class="form-select" name="group" id="group">
                 <option disabled selected value>Не выбрана</option>
-                {% for group in groups %}
-                <option value="{{ group.id }}">{{ group.name }}</option>
+                {% for row in groups %}
+                <option value="{{ row.id }}">{{ row.name }}</option>
                 {% endfor %}
             </select>
             <label class="col-lg-1" for="student">Студент</label>
             <select class="col-lg-3" class="form-select" name="student" id="student">
                 <option disabled selected value>Не выбран</option>
-                {% for student in students %}
-                <option value="{{ student.user_id }}">{{ student.last_name + ' ' + student.first_name[0] + '.' +
-                    student.middle_name[0] + '.' }}
-                </option>
+                {% for row in students %}
+                <option value="{{ row.user.id }}">{{ row.user.last_name }} {{ row.user.first_name.0 }}.{{ row.user.middle_name.0 }}.</option>
                 {% endfor %}
             </select>
-            <input class=" offset-lg-1 col-lg-3" id="add_student_discipline" type="submit" value="Записать на дисциплину">
+            <input class=" offset-lg-1 col-lg-3" id="add_student_discipline" type="submit"
+                   value="Записать на дисциплину">
         </div>
     </form>
     <form method="post">
+        {% csrf_token %}
         <h4>Добавить тему</h4>
         <div class="row">
             <label class="col-lg-5" for="name">Введите название новой темы</label>
@@ -43,9 +45,9 @@
     <div class="row">
         <div class="col-lg-3">Тема</div>
     </div>
-    {% for theme in themes %}
+    {% for row in data %}
     <div class="row">
-        <div class="col-lg-12"><a href="{{ url_for('task', theme=theme.id) }}">{{ theme.name }}</a></div>
+        <div class="col-lg-12"><a href="{% url 'app:theme_id' row.id %}">{{ row.name }}</a></div>
     </div>
     {% endfor %}
 </div>
