--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -7,22 +7,22 @@
     </div>
     <div class="row">
         <div class="col-lg-2">Название</div>
-        <div class="col-lg-10">{{ name }}</div>
+        <div class="col-lg-10">{{ student_task.task.name }}</div>
     </div>
     <div class="row">
         <div class="col-lg-2">Количество проверок</div>
-        <div class="col-lg-10">{{ count_review }}</div>
+        <div class="col-lg-10">{{ student_task.task.review_count }}</div>
     </div>
     <div class="row">
-        <div class="col-lg-12"><a href="{{ link }}">Ссылка</a></div>
+        <div class="col-lg-12"><a href="{{ student_task.task.link }}">Ссылка</a></div>
     </div>
     <div class="row">
         <h4>Требования</h4>
     </div>
     <div class="row">
         <ul>
-            {% for requirement in requirement %}
-            <li>{{ requirement }}</li>
+            {% for row in requirements %}
+            <li>{{ row }}</li>
             {% endfor %}
         </ul>
     </div>
@@ -30,6 +30,7 @@
     <div class="row">
         <h4>Загрузить новое решение</h4>
         <form method="post" class="col-lg-3" enctype=multipart/form-data>
+            {% csrf_token %}
             <div class="form-group">
                 <label for="zip">Прикрепите архив zip</label>
                 <input type="file" id="zip" class="form-control" name="zip" accept="application/zip"
@@ -49,12 +50,12 @@
         <div class="col-lg-3"> Количество проверок</div>
         <div class="col-lg-3"> Замечание</div>
     </div>
-    {% for solving in solving %}
+    {% for row in solving %}
     <div class="row">
-        <div class="col-lg-3">{{ solving.created_at }}</div>
-        <div class="col-lg-3">{{ solving.review_count }}</div>
-        {% if solving.review %}
-        <div class="col-lg-6"><a href="{{ url_for('review_id', id_=solving.review.id) }}">{{ solving.review.status }}</a></div>
+        <div class="col-lg-3">{{ row.created_at }}</div>
+        <div class="col-lg-3">{{ row.review_count }}</div>
+        {% if row.review %}
+        <div class="col-lg-6"><a href="{% url 'review_id' solving.review.id %}">{{ solving.review.status }}</a></div>
         {% endif %}
     </div>
     {% endfor %}
