--- a/templates/theme_id.html
+++ b/templates/theme_id.html
@@ -6,6 +6,7 @@
         <h4>{{ theme }}</h4>
     </div>
     <form method="post">
+        {% csrf_token %}
         <h4>Новая задача</h4>
         <div class="row">
             <label class="col-lg-2" for="name">Название</label>
@@ -26,9 +27,9 @@
     <div class="row">
         <div class="col-lg-3">Тема</div>
     </div>
-    {% for task in data %}
+    {% for row in data %}
     <div class="row">
-        <div class="col-lg-12"><a href="{{ url_for('requirement', task=task.id) }}">{{ task.name }}</a></div>
+        <div class="col-lg-12"><a href="{% url 'app:task_id' row.id %}">{{ row.name }}</a></div>
     </div>
     {% endfor %}
 </div>
