--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -25,7 +25,8 @@
                     <form method="post" class="form-list" enctype=multipart/form-data>
                         <label for="zip">Прикрепите архив zip</label>
                         <div class="flex-in-line form-for-add">
-                            <input class="add-button add color-white" type="button"
+                            <label for="zip">Выбрать файл</label>
+                            <input class="add-button add color-white" type="file"
                                    id="zip" name="zip" accept="application/zip"
                                    required="required" size="20971520" value="Выбрать файл">
                             <p>Файл не выбран</p>
