поправил for_url и запрос к task__theme__discipline__author__user__id

--- a/templates/student_task_id.html
+++ b/templates/student_task_id.html
@@ -61,7 +61,7 @@
                             <div class="col cell">{{ solving.review_count }}</div>
                             {% if solving.review %}
                             <div class="col cell border-radius-right"><a
-                                    href="{{ url_for('review_id', id_=solving.review.id) }}">
+                                    href="{% url 'app:review_id' solving.review.id %}">
                                 {{ solving.review.status }}</a></div>
                             {% endif %}
                         </div>
