--- a/templates/sign.html
+++ b/templates/sign.html
@@ -1,4 +1,11 @@
 {% extends 'base.html' %}
+
+{% load static %}
+
+{% block head %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/sign.css' %}">
+{% endblock %}
+
 {% block body %}
 <div class="container">
     <div class="input-box">
